fixed bug that makes scrollbar appear as animation pass the screen

--- a/css/main.scss
+++ b/css/main.scss
@@ -15,6 +15,7 @@ html {
     grid-template-columns: repeat(6, 1fr);
     grid-auto-rows: minmax(50px, auto);
     margin: 0 auto;
+    overflow-x:hidden;
   }
 }
 
@@ -27,6 +28,7 @@ body {
   grid-template-columns: repeat(6, 1fr);
   grid-auto-rows: minmax(50px, auto);
   margin: 0 auto;
+  overflow-x:hidden; 
 }
 
 header{
